--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flask Website</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
 
-{{ navbar|safe }}
+  {% include 'navbar.html' %}
 
 <div class="container mt-4">
   <h1>Welcome to My Website</h1>
