update card to responsive and a little bit navbar
update card to responsive and a little bit navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,20 +24,61 @@
   </div>
 
   <!-- Main Content Area -->
-  <div class="card text-center">
-    <div class="card-header">
-      Dormitory Good Good
-    </div>
-    <div><img src="/static/img/background.jpg" class="card-img" alt="exampleDormitory">
-    </div>
+  <div class="card">
+    <img src="/static/img/Domitory1.jpg" class="card-img-top" alt="..." style="width: 100%; height: 100%; object-fit: cover;">
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Details other</a>
-    </div>
+      <h5 class="card-title">Dormitory1</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="d-grid gap-2 col-md-6 mx-auto">
+        <button class="btn btn-primary" type="button">Details</button>
+      </div>
+    </div>  
   </div>
+  <div class="card">
+    <img src="/static/img/Domitory2.jpg" class="card-img-top" alt="..." style="width: 100%; height: 100%; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Dormitory2</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="d-grid gap-2 col-md-6 mx-auto">
+        <button class="btn btn-primary" type="button">Details</button>
+      </div>
+    </div>  
+  </div>
+  <div class="card">
+    <img src="/static/img/Domitory3.jpg" class="card-img-top" alt="..." style="width: 100%; height: 100%; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Dormitory3</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="d-grid gap-2 col-md-6 mx-auto">
+        <button class="btn btn-primary" type="button">Details</button>
+      </div>
+    </div>  
+  </div>
+  <div class="card">
+    <img src="/static/img/Domitory4.jpg" class="card-img-top" alt="..." style="width: 100%; height: 100%; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Dormitory4</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="d-grid gap-2 col-md-6 mx-auto">
+        <button class="btn btn-primary" type="button">Details</button>
+      </div>
+    </div>  
+  </div>
+  <div class="card">
+    <img src="/static/img/Domitory5.jpg" class="card-img-top" alt="..." style="width: 100%; height: 100%; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Dormitory3</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="d-grid gap-2 col-md-6 mx-auto">
+        <button class="btn btn-primary" type="button">Details</button>
+      </div>
+    </div>  
+  </div>
+  <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
 
 
+
+  <script src="/static/js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
