--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
     <!-- Navbar  -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
       <div class="container">
-        <a class="navbar-brand" href="/">Welcome!</a>
+        <a class="navbar-brand" href="/" style="font-size: 30px;">Welcome!</a>
         <button
           class="navbar-toggler"
           type="button"
