--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,16 +42,35 @@ body {
   background-color: wheat;
   font-size: 25px;
   border-radius: 15px;
-  margin: 40px;
+  margin: 200px;
   height: 20px;
 }
 
 .card-body {
-  background-color: wheat;
-  backdrop-filter: blur(40px);
+  background-color:#2B781F;
 }
 
-.card-header {
-  background-color: wheat;
-  backdrop-filter: blur(40px);
+.card-img-container {
+  position: relative;
+  width: 200px; /* Adjust this value as needed */
+  height: 200px; /* Adjust this value as needed */
+  overflow: hidden;
+}
+
+#goToTopBtn {
+  display: none; /* Initially hide the button */
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  z-index: 1000; /* Ensure it appears above other elements */
+}
+
+#goToTopBtn:hover {
+  background-color: #0056b3;
 }
