link to google map like fooling people
link to google map like fooling people

--- a/templates/dormitory.html
+++ b/templates/dormitory.html
@@ -32,7 +32,7 @@
                 <div class="d-grid gap-2 col-md-6 mx-auto">
                     
                     <!-- Use url_for to generate the URL for the other_page route  or generate to map for looking address-->
-                    <a href="{{ url_for('other_page') }}" class="btn btn-primary btn-sm"><i class="bi bi-map-fill"></i>&nbsp; Looking address</a>
+                    <a href="https://maps.app.goo.gl/GRkxAL2BiYHzxqGbA" class="btn btn-primary btn-sm"><i class="bi bi-map-fill"></i>&nbsp; Looking address</a>
                     <a href="/" class="btn btn-primary btn-sm"><i class="bi bi-arrow-return-left"></i>&nbsp; back</a>
                 </div>
             </div>
