--- a/templates/dormitory.html
+++ b/templates/dormitory.html
@@ -25,7 +25,7 @@
                 <h2 class="card-title">Dormitory3</h2>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Monthly rent : 7000-8000 </p>
+                <p class="card-text">Monthly rent : 7000-8000 Bath/Mouth</p>
                 <p class="card-text">Address : ####/#### somewhere </p>
                 <p class="card-text">Contact : 0999999999 </p>
                 <p class="card-text">Email : Domitory3@gmail.com </p>
