--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,7 @@
           <div class="mx-auto"></div>
           <ul class="navbar-nav">     
             <li class="nav-item">
-              <a class="nav-link text-white" href="#"><i class="bi bi-house"></i>&nbsp;&nbsp;Dormitory</a>
+              <a class="nav-link text-white" href="/"><i class="bi bi-house"></i>&nbsp;&nbsp;Dormitory</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#"><i class="bi bi-chat-square-text-fill"></i>&nbsp;&nbsp;WebBoard</a>
