--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Index</title>
+  <title>DormitoryMain</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <body>
@@ -35,22 +34,33 @@
         {% for item in data %}
         <div class="col-md-4">
           <div class="card h-80">
-            <img class="card-img-top" src="{{ item.image }}" alt="{{ item.name }} Image">
+            <img class="card-img-top" src="{{ item.imageUrl }}" alt="">
             <!-- Use the image URL or file path from the database -->
             <h5 class="card-title">{{ item.name }}</h5> <!-- Display name -->
             <p>Price: {{ item.price }}</p> <!-- Display price -->
             <p>Address: {{ item.address }}</p> <!-- Display address -->
+            <div class="d-grid gap-2 col-md-6 mx-auto">
+              <a href="{{ url_for('other_page') }}" class="btn btn-primary">Details</a>
+            </div>
           </div>
         </div>
         {% endfor %}
+        
       </div>
     </div>
     <!-- Add more carousel items if needed -->
   </div>
 </div>
-
+<footer class="footer mt-auto py-3 text-white">
+  <div class="container text-center">
+    <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+    <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
+  </div>
+</footer>
 <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
