--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
   background: url(/static/img/background.jpg);
   background-blend-mode: multiply;
   background-position: center;
-  background-size: cover;
+  background-size: reletive;
   background-repeat: no-repeat;
 }
 
@@ -13,11 +13,19 @@ body {
   backdrop-filter: blur(50px);
   font-size: 25px;
 }
+
 .footer {
   background: blur;
-  backdrop-filter: blur(50px);
+  backdrop-filter: blur(50px);/* Apply blur effect */
   font-size: 15px;
+  position: fixed; /* Fixed position at the bottom of the viewport */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 20px; /* Add padding for better readability */
 }
+
 
 .navbar-nav .nav-link {
   color: white;
@@ -33,31 +41,40 @@ body {
 .card-img {
   width: 100%;
   height: auto;
-  max-width: 200px; /* Adjust the maximum width as needed */
+  max-width: 200px;
+  /* Adjust the maximum width as needed */
   margin: auto;
   object-fit: cover;
 }
-.card-text{
+.card-img-top {
+  object-fit: cover;
+  height: 200px; /* Set a fixed height for consistency */
+}
+.card-text {
   text-align: left;
   font-size: 20px;
 }
+
 .card {
   text-align: center;
   background-color: rgb(255, 255, 255);
   font-size: 25px;
   border-radius: 15px;
-  margin: 20px; /* Adjust margin for spacing */
-  padding: 20px; /* Adjust padding for spacing */
+  margin: 20px;
+  /* Adjust margin for spacing */
+  padding: 20px;
+  /* Adjust padding for spacing */
 }
 
 .card-body {
-  background-color:#ffffff;
+  background-color: #ffffff;
 }
 
 .card-img-container {
   position: relative;
   width: 100%;
-  max-width: 200px; /* Adjust the maximum width as needed */
+  max-width: 200px;
+  /* Adjust the maximum width as needed */
   height: auto;
   overflow: hidden;
 }
@@ -75,45 +92,53 @@ body {
   cursor: pointer;
   z-index: 1000;
 }
+
 .card-img-top {
   width: 100%;
-  height: 200px; /* Adjust the height as needed */
+  height: 200px;
+  /* Adjust the height as needed */
   object-fit: cover;
 }
 
 
 #goToTopBtn:hover {
-  background-color:  rgb(86, 86, 86);
+  background-color: rgb(86, 86, 86);
 }
 
 /* Media queries for responsiveness */
 @media screen and (min-width: 768px) {
+
   /* Styles for tablets and larger devices */
   .card {
-    margin: 2px; /* Adjust margin for larger screens */
+    margin: 2px;
+    /* Adjust margin for larger screens */
   }
 }
 
 @media screen and (min-width: 992px) {
+
   /* Styles for desktops and larger devices */
   .card {
-    margin: 10px; /* Adjust margin for larger screens */
+    margin: 10px;
+    /* Adjust margin for larger screens */
   }
 }
 
 
 @keyframes popup {
   0% {
-      transform: scale(0.8);
-      opacity: 0;
+    transform: scale(0.8);
+    opacity: 0;
   }
+
   50% {
-      transform: scale(1.1);
-      opacity: 1;
+    transform: scale(1.1);
+    opacity: 1;
   }
+
   100% {
-      transform: scale(1);
-      opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
