--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
   background: url(/static/img/background.jpg);
   background-blend-mode: multiply;
   background-position: center;
-  background-size: reletive;
+  background-size:cover;
   background-repeat: no-repeat;
 }
 
@@ -41,15 +41,12 @@ body {
 .card-img {
   width: 100%;
   height: auto;
-  max-width: 200px;
+  max-width:100%;
   /* Adjust the maximum width as needed */
   margin: auto;
   object-fit: cover;
 }
-.card-img-top {
-  object-fit: cover;
-  height: 200px; /* Set a fixed height for consistency */
-}
+
 .card-text {
   text-align: left;
   font-size: 20px;
@@ -71,7 +68,7 @@ body {
 }
 
 .card-img-container {
-  position: relative;
+  position:contain;
   width: 100%;
   max-width: 200px;
   /* Adjust the maximum width as needed */
@@ -94,11 +91,11 @@ body {
 }
 
 .card-img-top {
-  width: 100%;
-  height: 200px;
-  /* Adjust the height as needed */
-  object-fit: cover;
+  height: 200px; /* ปรับความสูงเป็นค่าคงที่ */
+  object-fit: cover; /* ครอบคลุมพื้นที่ของอิลิเมนต์ */
+  width: 100%; /* ทำให้ภาพเต็มขนาด */
 }
+
 
 
 #goToTopBtn:hover {
@@ -107,22 +104,29 @@ body {
 
 /* Media queries for responsiveness */
 @media screen and (min-width: 768px) {
-
   /* Styles for tablets and larger devices */
   .card {
-    margin: 2px;
-    /* Adjust margin for larger screens */
+    margin: 2px; /* ปรับขนาดของขอบ */
+  }
+  .card-img-top {
+    width: 200px; /* กำหนดความกว้างเป็นค่าคงที่ */
+    height: 200px; /* กำหนดความสูงเป็นค่าคงที่ */
+    object-fit: cover; /* ครอบคลุมพื้นที่ของอิลิเมนต์ */
   }
 }
 
 @media screen and (min-width: 992px) {
-
   /* Styles for desktops and larger devices */
   .card {
-    margin: 10px;
-    /* Adjust margin for larger screens */
+    margin: 40px; /* ปรับขนาดของขอบ */
+  }
+  .card-img-top {
+    width: 200px; /* กำหนดความกว้างเป็นค่าคงที่ */
+    height: 200px; /* กำหนดความสูงเป็นค่าคงที่ */
+    object-fit: cover; /* ครอบคลุมพื้นที่ของอิลิเมนต์ */
   }
 }
+
 
 
 @keyframes popup {
