--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
                 <div class="card mb-3">
                     <img src="{{ item.imageUrl }}" class="card-img-top" alt="{{ item.name }}">
                     <div class="card-body">
-                        <h5 class="card-title">{{ item.name }}</h5>
-                        <p class="card-text">{{ item.address }}</p>
+                        <h3 class="card-title">{{ item.name }}</h3>
+                        <p class="card-text">Address : {{ item.address }}</p>
                         <p class="card-text">Monthly rent: {{ item.price }}</p>
                         <a href="{{ url_for('other_page', item_id=item['_id']) }}" class="btn btn-primary">Details</a>
                     </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
 </div>
-
+<i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
 <footer class="footer mt-auto py-2 text-white">
     <div class="container text-center">
         <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
