--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,10 @@
     </div>
   </div>
   <br>
+  <a href="{{ url_for('add_data_page') }}" class="btn btn-primary">Add Data</a>
+
+
+
   
 <div class="carousel-inner mb-5"> <!-- Add bottom margin to prevent overlap -->
     <div class="carousel-item active">
