--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
@@ -20,46 +20,55 @@
   <br>
   <div class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
     <div class="content text-center">
-      <h1 class="text-white" id="popup-text">Welcome To Dormitory</h1>
+      <h1 class="text-white" id="popup-text">Welcome To Dormitory</h1>  
     </div>
   </div>
   <br>
-  <a href="{{ url_for('add_data_page') }}" class="btn btn-primary">Add Data</a>
+  <div class="container">
+    <div class="d-flex justify-content-center">
+      <a href="{{ url_for('add_data_page') }}" class="btn btn-primary"><i class="bi bi-house-add"></i>&nbsp;Add Data</a>
+      <a href="{{ url_for('update') }}" class="btn btn-warning ml-3"><i class="bi bi-house-gear"></i>&nbsp;Update & Delete</a>
+    </div>
+  </div>
 
 
 
-  
-<div class="carousel-inner mb-5"> <!-- Add bottom margin to prevent overlap -->
+
+
+  <div class="carousel-inner mb-5"> <!-- Add bottom margin to prevent overlap -->
     <div class="carousel-item active">
-        <div class="row">
-            {% for item in items %}
-            <div class="col-md-4">
-                <div class="card mb-3">
-                    <img src="{{ item.imageUrl }}" class="card-img-top" alt="{{ item.name }}">
-                    <div class="card-body">
-                        <h3 class="card-title">{{ item.name }}</h3>
-                        <p class="card-text">Address : {{ item.address }}</p>
-                        <p class="card-text">Monthly rent: {{ item.price }}</p>
-                        <a href="{{ url_for('other_page', item_id=item['_id']) }}" class="btn btn-primary">Details</a>
-                    </div>
-                </div>
+      <div class="row">
+        {% for item in items %}
+        <div class="col-md-4">
+          <div class="item">
+            <img src="{{ item.imageUrl }}" class="card-img-top" alt="{{ item.name }}">
+            <div ">
+              <h3 >{{ item.name }}</h3>
+              <p >Address : {{ item.address }}</p>
+              <p >Monthly rent: {{ item.price }}</p>
+              <a href="{{ url_for('other_page', item_id=item['_id']) }}" class="btn btn-primary">Details</a>
             </div>
-            {% endfor %}
+          </div>
         </div>
+        {% endfor %}
+      </div> <!-- Move this closing tag outside of the loop -->
     </div>
-</div>
-<i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
-<footer class="footer mt-auto py-2 text-white">
+  </div>
+  
+<br><br><br><br>
+  </div>
+  <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
+  <footer class="footer mt-auto py-2 text-white">
     <div class="container text-center">
-        <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
-        <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
+      <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+      <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
     </div>
-</footer>
+  </footer>
   <!-- Bootstrap and custom scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="/static/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 
 </html>
