--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,12 @@ body {
   font-size: 25px;
 }
 
+.item {
+  margin-bottom: 20px; /* Adjust the value as needed */
+  padding-bottom: 20px; /* Optional: adds padding inside the item */
+  border-bottom: 1px solid #ddd; /* Optional: adds a bottom border to visually separate items */
+}
+
 .footer {
   background: blur;
   backdrop-filter: blur(50px);/* Apply blur effect */
