--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,6 +7,7 @@
   <title>Bootstrap 5 - Transparent Navbar</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <a href="https://lordicon.com/">Icons by Lordicon.com</a>
 </head>
 
 <body>
