--- a/templates/other_page.html
+++ b/templates/other_page.html
@@ -31,6 +31,7 @@
                     <p class="card-text">Address: {{ item['address'] }}</p>
                     <p class="card-text">Monthly rent: {{ item['price'] }}</p>
                     <p class="card-text">Contact: {{ item['contact'] }}</p>
+                    <p class="card-text">Available Room: {{ item['numberOfRoomsAvailable'] }} / {{ item['numberOfRoomsAvailable'] }}</p>
                     <a href="{{ url_for('index') }}" class="btn btn-primary">Back</a>
                 </div>
             </div>
