--- a/templates/update_form.html
+++ b/templates/update_form.html
@@ -48,6 +48,10 @@
                 <h4 for="contact">Contact :</h4>
                 <input type="text" class="form-control" id="contact" name="contact" value="{{ item.contact }}">
             </div>
+            <div class="form-group">
+                <h4 for="numberOfRoomsAvailable">Rooms :</h4>
+                <input type="text" class="form-control" id="numberOfRoomsAvailable" name="numberOfRoomsAvailable" value="{{ item.numberOfRoomsAvailable }}">
+            </div>
 
             <br>
             <button type="submit" class="btn btn-primary"><i class="bi bi-house-gear"></i>&nbsp;Update</button>
